--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <title>Awesome application</title>
-    <link rel="stylesheet" href="css/semantic.min.css">
+    <link rel="stylesheet" href="http://bootswatch.com/paper/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -19,6 +22,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-cookies.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-animate.js"></script>
     <script src="https://angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
+    <script src="js/lib/ui-bootstrap-0.11.2.js"></script>
 
     <script src="js/application.js"></script>
     <script src="js/controllers.js"></script>
