--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <title>Awesome application</title>
-    <link rel="stylesheet" href="http://bootswatch.com/paper/bootstrap.min.css">
+    <link rel="stylesheet" href="http://bootswatch.com/lumen/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="http://bootswatch.com/paper/bootstrap.min.css">-->
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
