--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <title>Awesome application</title>
+    <!--<link rel="stylesheet" href="http://bootswatch.com/lumen/bootstrap.min.css">-->
     <link rel="stylesheet" href="http://bootswatch.com/lumen/bootstrap.min.css">
-    <!--<link rel="stylesheet" href="http://bootswatch.com/paper/bootstrap.min.css">-->
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <div ui-view></div>
+    <div ui-view class="full"></div>
 
     <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.js"></script>
