--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <div ui-view class="full"></div>
+    <div ui-view></div>
 
     <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.js"></script>
