Redesign crud for better responsive xp (in progress)

--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -18,7 +18,7 @@
 
 <div id="main-container" ng-init="$rootScope.menuVisible=false" ng-class="{menuvisible: $rootScope.menuVisible}">
     <div id="sidebar-wrapper">
-        <div class="nav navbar navbar-default navbar-custom">
+        <div class="nav navbar navbar-default navbar-custom navbar-sidebar">
             <div id="close-menu" class="nav-button-close" ng-click="$rootScope.menuVisible = false">
                 <i class="fa fa-times">&nbsp;</i>
             </div>
