--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -36,7 +36,55 @@
 </head>
 <body>
 
-<div ui-view></div>
+    <div layout="row" class="main-container">
+        <!-- Side bar menu -->
+        <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$media('md')">
+            <md-content ng-controller="LeftNavCtrl">
+                <md-toolbar class="md-tall" md-theme="default">
+                    <h1 class="md-toolbar-tools">Starterkit Application</h1>
+                </md-toolbar>
+
+                <a ui-sref="user.home" layout="row" class="menu-item menu-title" >
+                    <i class="fa fa-home menu-icon"></i>
+                    Welcome
+                </a>
+                <a ui-sref="user.ui-demo" layout="row" class="menu-item menu-title">
+                    <i class="fa fa-list-alt menu-icon"></i>
+                    UI Components Demo
+                </a>
+                <a ui-sref="user.crud" layout="row" class="menu-item menu-title">
+                    <i class="fa fa-file-text-o menu-icon"></i>
+                    CRUD Example
+                </a>
+                <a ui-sref="user.chat" layout="row" class="menu-item menu-title">
+                    <i class="fa fa-comments-o menu-icon"></i>
+                    chat
+                </a>
+            </md-content>
+        </md-sidenav>
+
+        <div layout="column" layout-fill>
+            <md-toolbar>
+                <div class="md-toolbar-tools" ng-controller="MainCtrl">
+                    <md-button class="menu-icon" hide="" show-phone="" show-tablet="" aria-label="Toggle Menu" ng-click="toggleLeft()">
+                        <i class="fa fa-bars" style="font-size:24px; line-height:24px;color:white;"></i>
+                    </md-button>
+
+                    <span>{{screen.title}}</span>
+
+                    <!-- fill up the space between left and right area -->
+                    <span flex></span>
+                </div>
+            </md-toolbar>
+
+
+            <md-content flex class="md-padding">
+                <div ui-view></div>
+            </md-content>
+
+        </div>
+    </div>
+
 
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-ui-router/angular-ui-router.js"></script>
