Remove heavy background from menu sidebar

--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -40,7 +40,7 @@
         <!-- Side bar menu -->
         <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$media('md')">
             <md-content ng-controller="LeftNavCtrl">
-                <md-toolbar class="md-tall menu-sidenav" md-theme="default">
+                <md-toolbar class="menu-sidenav">
                     <h1 class="md-toolbar-tools">Starterkit Application</h1>
                 </md-toolbar>
 
