Update design menu

--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -30,9 +30,6 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Starterkit application</title>
-
-
-
 </head>
 <body>
 
@@ -41,7 +38,7 @@
         <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$media('md')">
             <md-content ng-controller="LeftNavCtrl">
                 <md-toolbar class="menu-sidenav">
-                    <h1 class="md-toolbar-tools">Starterkit Application</h1>
+                    <h3 class="md-toolbar-tools"><i class="fa fa-star" style="font-size:1.3em;color:#E57373;text-shadow: 0 0 6px #fff;"></i>&nbsp;Starterkit App</h3>
                 </md-toolbar>
 
                 <a ui-sref="user.home" layout="row" class="menu-item menu-title" >
